# face-recognition-demo

./: .gitignore  Face-recognition.ipynb  README.md  pyproject.toml
