[project]
name = "face-detection"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub>=1.5.0",
    "insightface>=0.7.3",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "scikit-image<0.26",
    "supervision>=0.27.0.post1",
    "torch>=2.10.0",
    "ultralytics>=8.4.19",
]
